Add Default Roles management with possible custom configuration